# pfm-app

./: .gitignore  AGENT.md  AGENTS.md  PFM_PROJECT_STATE.md  README.md  RUN_COMMANDS.md  compose.yml  render.yaml
client/: .dockerignore  (+8 more)
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 202606120114_initial_empty_baseline.py  202606150201_add_user_refresh_session_schema.py  202606150301_add_finance_domain_schema.py  202606190401_add_budget_schema.py  202606190403_add_savings_goals_schema.py  202606210504_add_report_query_indexes.py  (+18 more)
server/app/: __init__.py  main.py
server/scripts/: export_openapi.py  start.sh
server/tests/: conftest.py  test_accounts_categories.py  test_adapters.py  test_app_core.py  test_auth_schema.py  test_budget_savings_contracts.py  test_budget_schema.py  test_budgets.py  test_dashboard_reports.py  test_database.py  test_finance_contracts.py  test_finance_schema.py  test_integration_boundaries.py  test_loans.py  test_login.py  test_migrations.py  test_notifications.py  test_notifications_schema.py  test_oauth.py  test_oauth_accounts.py  test_package_import.py  test_receipts.py  test_receipts_schema.py  test_recurring_due_dates.py  test_recurring_reminders.py  test_recurring_rules.py  test_recurring_schema.py  test_recurring_worker.py  test_refresh.py  test_registration.py  test_report_analytics.py  test_report_contracts.py  test_savings.py  test_savings_schema.py  test_transactions.py  test_users_profile.py
(+526 files in other folders)
