[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pfm-server"
version = "0.1.0"
description = "FastAPI backend foundation for the PFM app."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.17,<2.0",
  "asyncpg>=0.31,<1.0",
  "authlib>=1.7,<2.0",
  "cryptography>=45,<48",
  "fastapi>=0.125,<1.0",
  "pydantic-settings>=2.12,<3.0",
  "pwdlib[argon2]>=0.3,<1.0",
  "PyJWT>=2.10,<3.0",
  "python-dotenv>=1.2,<2.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "uvicorn[standard]>=0.38,<1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.19,<2.0",
  "ruff>=0.14,<1.0",
]
test = [
  "httpx>=0.28,<1.0",
  "pytest>=9.0,<10.0",
  "pytest-asyncio>=1.3,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
